[gd_scene load_steps=8 format=2]

[ext_resource path="res://Word/UpgradeMenu.gd" type="Script" id=2]
[ext_resource path="res://Asdonuts.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 31
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "menuIdle"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 730, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 0.0915053 ),
"update": 0,
"values": [ Vector2( 576, 0 ), Vector2( 760, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 730, 0 ), Vector2( 555, 0 ) ]
}

[node name="Node2D" type="CanvasLayer"]
layer = 10
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = 730.0
margin_right = 999.866
margin_bottom = 480.0
color = Color( 0.54902, 0.54902, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/ColorRect"]
margin_top = 72.0
margin_right = 63.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 1 )
text = "$0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/ColorRect"]
margin_left = 3.0
margin_top = 147.0
margin_right = 66.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 5 )
text = "PAT:0.25"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/ColorRect"]
margin_left = 95.352
margin_top = 52.0
margin_right = 263.352
margin_bottom = 451.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect/MarginContainer"]
margin_right = 169.0
margin_bottom = 399.0

[node name="Button" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
margin_right = 169.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
text = "Upgrade Speed $25"

[node name="Button2" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 169.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 60 )
text = "Add Car Slot $100"

[node name="Button3" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 169.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 60 )
text = "+Customer Patience $50"

[node name="Button4" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 169.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 60 )

[node name="Button5" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 169.0
margin_bottom = 316.0
rect_min_size = Vector2( 0, 60 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
autoplay = "menuclose"
anims/menuIdle = SubResource( 2 )
anims/menuclose = SubResource( 3 )
anims/menuopen = SubResource( 4 )

[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/Button2" to="." method="Button_CarSlot"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
